🐛 ⬆️ simple bug fix. Update Crosis and Protocol

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "onFileSystem:replit",
     "onCommand:replit.openrepl",
     "onCommand:replit.apikey",
-    "onCommand:replit.captchakey"
+    "onCommand:replit.captchakey",
+    "oncommand:replit.refreshcaptcha"
   ],
   "main": "./dist/extension.js",
   "contributes": {
@@ -42,7 +43,7 @@
       },
       {
         "command": "replit.openmptest",
-        "title": "Open the Multiplayer test",
+        "title": "Open the Multiplayer test (experimental, non-functional)",
         "category": "Replit"
       },
       {
@@ -131,8 +132,8 @@
     "webpack-cli": "^4.3.1"
   },
   "dependencies": {
-    "@replit/crosis": "^6.0.4",
-    "@replit/protocol": "^0.2.16",
+    "@replit/crosis": "^6.3.0",
+    "@replit/protocol": "^0.2.28",
     "graphql": "^15.4.0",
     "graphql-request": "^3.4.0",
     "lodash.debounce": "^4.0.8",
