--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/roblockhead/replit-vscode-revived.git"
   },
   "engines": {
-    "vscode": "^1.56.0"
+    "vscode": "^1.62.0"
   },
   "categories": [
     "Other"
@@ -92,7 +92,7 @@
     "watch": "webpack --mode development --watch",
     "lint": "eslint ./src --quiet",
     "tscc": "tsc -p ./ --noEmit",
-    "test": "echo \"no teste :(\""
+    "test": ""
   },
   "prettier": {
     "trailingComma": "all",
@@ -104,40 +104,40 @@
     "arrowParens": "always"
   },
   "devDependencies": {
-    "@types/glob": "^7.1.3",
+    "@types/glob": "^7.2.0",
     "@types/lodash.debounce": "^4.0.6",
-    "@types/mocha": "^8.0.4",
-    "@types/node": "^12.19.12",
-    "@types/node-fetch": "^2.5.7",
-    "@types/vscode": "^1.56.0",
-    "@types/websocket": "^1.0.1",
-    "@types/ws": "^7.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.12.0",
-    "@typescript-eslint/parser": "^4.12.0",
-    "eslint": "^7.15.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.22.0",
-    "glob": "^7.1.6",
-    "mocha": "^8.1.3",
-    "prettier": "^2.2.1",
-    "ts-loader": "^9.2.1",
-    "typescript": "^4.1.2",
-    "vscode-test": "^1.5.2",
-    "webpack": "^5.37.1",
-    "webpack-cli": "^4.3.1"
+    "@types/mocha": "^8.2.3",
+    "@types/node": "^12.20.37",
+    "@types/node-fetch": "^2.5.12",
+    "@types/vscode": "^1.63.0",
+    "@types/websocket": "^1.0.4",
+    "@types/ws": "^7.4.7",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "@vscode/test-electron": "^1.6.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-react": "^7.27.1",
+    "glob": "^7.2.0",
+    "mocha": "^8.4.0",
+    "prettier": "^2.5.1",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.4",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   },
   "dependencies": {
-    "@replit/crosis": "^6.3.0",
-    "@replit/protocol": "^0.2.28",
-    "graphql": "^15.4.0",
-    "graphql-request": "^3.4.0",
+    "@replit/crosis": "^7.2.0",
+    "@replit/protocol": "^0.2.45",
+    "graphql": "^15.8.0",
+    "graphql-request": "^3.7.0",
     "lodash.debounce": "^4.0.8",
-    "node-fetch": "^2.6.1",
-    "ws": "^7.4.2"
+    "node-fetch": "^2.6.6",
+    "ws": "^7.5.6"
   }
 }
